--- a/full/source/MAKEFILE
+++ b/full/source/MAKEFILE
@@ -54,50 +54,34 @@ $(dllDbgDir) :
     @if not exist $(dllDbgDir)\$(NULL) mkdir $(dllDbgDir)
 
 CPP=cl.exe
-exeRel_CPP_PROJ=/nologo /EHsc /MD  /W4         /O1 /Os /Oy /Ob0 /GF /Gy /D NDEBUG /D WIN32 /D _WIN32 /D UNICODE /D _UNICODE /D _CONSOLE /D GENSOCK_STATIC_LINK                               /D WINVER=$(WINVERTARGET) /Fo$(exeRelDir)\ /Fd$(exeRelDir)\ /FD /c
-exeDbg_CPP_PROJ=/nologo /EHsc /MDd /W4 /Zi /Od                  /GF /Gy /D _DEBUG /D WIN32 /D _WIN32 /D UNICODE /D _UNICODE /D _CONSOLE /D GENSOCK_STATIC_LINK                               /D WINVER=$(WINVERTARGET) /Fo$(exeDbgDir)\ /Fd$(exeDbgDir)\ /FD /c
-dllRel_CPP_PROJ=/nologo /EHsc /MD  /W4 /vd0    /O1 /Os /Oy /Ob0 /GF /Gy /D NDEBUG /D WIN32 /D _WIN32 /D UNICODE /D _UNICODE /D _WINDOWS /D GENSOCK_STATIC_LINK /D _USRDLL /D BLATDLL_EXPORTS /D WINVER=$(WINVERTARGET) /Fo$(dllRelDir)\ /Fd$(dllRelDir)\ /FD /c
-dllDbg_CPP_PROJ=/nologo /EHsc /MDd /W4 /Zi /Od                  /GF /Gy /D _DEBUG /D WIN32 /D _WIN32 /D UNICODE /D _UNICODE /D _WINDOWS /D GENSOCK_STATIC_LINK /D _USRDLL /D BLATDLL_EXPORTS /D WINVER=$(WINVERTARGET) /Fo$(dllDbgDir)\ /Fd$(dllDbgDir)\ /FD /c
+exeRel_CPP_PROJ=/nologo /EHsc /MT  /W4         /O1 /Os /Oy /Ob0 /GF /Gy /D NDEBUG /D WIN32 /D _WIN32 /D UNICODE /D _UNICODE /D _CONSOLE /D GENSOCK_STATIC_LINK                               /D WINVER=$(WINVERTARGET) /Fo$(exeRelDir)\ /Fd$(exeRelDir)\ /FD /c
+exeDbg_CPP_PROJ=/nologo /EHsc /MTd /W4 /Zi /Od                  /GF /Gy /D _DEBUG /D WIN32 /D _WIN32 /D UNICODE /D _UNICODE /D _CONSOLE /D GENSOCK_STATIC_LINK                               /D WINVER=$(WINVERTARGET) /Fo$(exeDbgDir)\ /Fd$(exeDbgDir)\ /FD /c
+dllRel_CPP_PROJ=/nologo /EHsc /MT  /W4 /vd0    /O1 /Os /Oy /Ob0 /GF /Gy /D NDEBUG /D WIN32 /D _WIN32 /D UNICODE /D _UNICODE /D _WINDOWS /D GENSOCK_STATIC_LINK /D _USRDLL /D BLATDLL_EXPORTS /D WINVER=$(WINVERTARGET) /Fo$(dllRelDir)\ /Fd$(dllRelDir)\ /FD /c
+dllDbg_CPP_PROJ=/nologo /EHsc /MTd /W4 /Zi /Od                  /GF /Gy /D _DEBUG /D WIN32 /D _WIN32 /D UNICODE /D _UNICODE /D _WINDOWS /D GENSOCK_STATIC_LINK /D _USRDLL /D BLATDLL_EXPORTS /D WINVER=$(WINVERTARGET) /Fo$(dllDbgDir)\ /Fd$(dllDbgDir)\ /FD /c
 
 .cpp{$(exeRelDir)}.obj::
-   $(CPP) @<<
-   $(exeRel_CPP_PROJ) $<
-<<
+   $(CPP) $(exeRel_CPP_PROJ) $<
 
 .cpp{$(exeDbgDir)}.obj::
-   $(CPP) @<<
-   $(exeDbg_CPP_PROJ) $<
-<<
+   $(CPP) $(exeDbg_CPP_PROJ) $<
 
 .cpp{$(dllRelDir)}.obj::
-   $(CPP) @<<
-   $(dllRel_CPP_PROJ) $<
-<<
+   $(CPP) $(dllRel_CPP_PROJ) $<
 
 .cpp{$(dllDbgDir)}.obj::
-   $(CPP) @<<
-   $(dllDbg_CPP_PROJ) $<
-<<
+   $(CPP) $(dllDbg_CPP_PROJ) $<
 
 .c{$(exeRelDir)}.obj::
-   $(CPP) @<<
-   $(exeRel_CPP_PROJ) $<
-<<
+   $(CPP) $(exeRel_CPP_PROJ) $<
 
 .c{$(exeDbgDir)}.obj::
-   $(CPP) @<<
-   $(exeDbg_CPP_PROJ) $<
-<<
+   $(CPP) $(exeDbg_CPP_PROJ) $<
 
 .c{$(dllRelDir)}.obj::
-   $(CPP) @<<
-   $(dllRel_CPP_PROJ) $<
-<<
+   $(CPP) $(dllRel_CPP_PROJ) $<
 
 .c{$(dllDbgDir)}.obj::
-   $(CPP) @<<
-   $(dllDbg_CPP_PROJ) $<
-<<
+   $(CPP) $(dllDbg_CPP_PROJ) $<
 
 RSC=rc.exe
 exeRel_RSC_PROJ=/l 0x409 /fo$(exeRelDir)\blat.res /d NDEBUG /d WIN32 /d _WIN32
@@ -207,10 +191,10 @@ dllDbg_LIB32_OBJS= \
 
 
 LINK32=link.exe
-exeRel_LINK32_FLAGS=$(exeRelDir)\blatproj.lib msvcrt.lib  wsock32.lib kernel32.lib advapi32.lib /nologo /subsystem:console /incremental:no  /pdb:none                  /map:$(exeRelDir)\blat.map        /machine:I386 $(DXP) /nodefaultlib                      /out:$(exeRelDir)\blat.exe
-exeDbg_LINK32_FLAGS=$(exeDbgDir)\blatproj.lib msvcrtd.lib wsock32.lib kernel32.lib advapi32.lib /nologo /subsystem:console /incremental:yes /pdb:$(exeDbgDir)\blat.pdb /map:$(exeDbgDir)\blat.map /debug /machine:I386 $(DXP) /nodefaultlib                      /out:$(exeDbgDir)\blat.exe
-dllRel_LINK32_FLAGS=$(dllRelDir)\blatproj.lib msvcrt.lib  wsock32.lib kernel32.lib advapi32.lib /nologo /dll               /incremental:no  /pdb:none                  /map:$(dllRelDir)\blat.map        /machine:I386 $(DXP) /nodefaultlib /def:$(dll_DEF_FILE) /out:$(dllRelDir)\blat.dll /implib:$(dllRelDir)\blat.lib
-dllDbg_LINK32_FLAGS=$(dllDbgDir)\blatproj.lib msvcrtd.lib wsock32.lib kernel32.lib advapi32.lib /nologo /dll               /incremental:yes /pdb:$(dllDbgDir)\blat.pdb /map:$(dllDbgDir)\blat.map /debug /machine:I386 $(DXP) /nodefaultlib /def:$(dll_DEF_FILE) /out:$(dllDbgDir)\blat.dll /implib:$(dllDbgDir)\blat.lib
+exeRel_LINK32_FLAGS=$(exeRelDir)\blatproj.lib libcmt.lib  wsock32.lib kernel32.lib advapi32.lib /nologo /subsystem:console /incremental:no  /pdb:none                  /map:$(exeRelDir)\blat.map        /STACK:102400 /machine:I386 $(DXP) /nodefaultlib                      /out:$(exeRelDir)\blat.exe
+exeDbg_LINK32_FLAGS=$(exeDbgDir)\blatproj.lib libcmtd.lib wsock32.lib kernel32.lib advapi32.lib /nologo /subsystem:console /incremental:yes /pdb:$(exeDbgDir)\blat.pdb /map:$(exeDbgDir)\blat.map /debug /STACK:102400 /machine:I386 $(DXP) /nodefaultlib                      /out:$(exeDbgDir)\blat.exe
+dllRel_LINK32_FLAGS=$(dllRelDir)\blatproj.lib libcmt.lib  wsock32.lib kernel32.lib advapi32.lib /nologo /dll               /incremental:no  /pdb:none                  /map:$(dllRelDir)\blat.map        /STACK:102400 /machine:I386 $(DXP) /nodefaultlib /def:$(dll_DEF_FILE) /out:$(dllRelDir)\blat.dll /implib:$(dllRelDir)\blat.lib
+dllDbg_LINK32_FLAGS=$(dllDbgDir)\blatproj.lib libcmtd.lib wsock32.lib kernel32.lib advapi32.lib /nologo /dll               /incremental:yes /pdb:$(dllDbgDir)\blat.pdb /map:$(dllDbgDir)\blat.map /debug /STACK:102400 /machine:I386 $(DXP) /nodefaultlib /def:$(dll_DEF_FILE) /out:$(dllDbgDir)\blat.dll /implib:$(dllDbgDir)\blat.lib
 
 exeRel_LINK32_OBJS= \
         $(exeRelDir)\blat.obj \
@@ -232,54 +216,38 @@ dllDbg_LINK32_OBJS= \
 $(exeRelDir)\blatproj.lib : $(exeRelDir) $(exe_DEF_FILE) $(exeRel_LIB32_OBJS)
     -@if exist $(exeRelDir)\blatproj.lib erase $(exeRelDir)\blatproj.lib
     -@if exist $(exeRelDir)\blat.obj erase $(exeRelDir)\blat.obj
-    $(LIB32) @<<
-  $(exeRel_LIB32_FLAGS) $(exeRel_LIB32_OBJS)
-<<
+    $(LIB32) $(exeRel_LIB32_FLAGS) $(exeRel_LIB32_OBJS)
 
 $(exeRelDir)\blat.exe : $(exeRelDir) $(exe_DEF_FILE) $(exeRelDir)\blatproj.lib \
                         $(exeRel_LINK32_OBJS)
-    $(LINK32) @<<
-  $(exeRel_LINK32_FLAGS) $(exeRel_LINK32_OBJS)
-<<
+    $(LINK32) $(exeRel_LINK32_FLAGS) $(exeRel_LINK32_OBJS)
 
 $(exeDbgDir)\blatproj.lib : $(exeDbgDir) $(exe_DEF_FILE) $(exeDbg_LIB32_OBJS)
     -@if exist $(exeDbgDir)\blatproj.lib erase $(exeDbgDir)\blatproj.lib
     -@if exist $(exeDbgDir)\blat.obj erase $(exeDbgDir)\blat.obj
-    $(LIB32) @<<
-  $(exeDbg_LIB32_FLAGS) $(exeDbg_LIB32_OBJS)
-<<
+    $(LIB32) $(exeDbg_LIB32_FLAGS) $(exeDbg_LIB32_OBJS)
 
 $(exeDbgDir)\blat.exe : $(exeDbgDir) $(exe_DEF_FILE) $(exeDbgDir)\blatproj.lib \
                         $(exeDbg_LINK32_OBJS)
-    $(LINK32) @<<
-  $(exeDbg_LINK32_FLAGS) $(exeDbg_LINK32_OBJS)
-<<
+    $(LINK32) $(exeDbg_LINK32_FLAGS) $(exeDbg_LINK32_OBJS)
 
 $(dllRelDir)\blatproj.lib : $(dllRelDir) $(dll_DEF_FILE) $(dllRel_LIB32_OBJS)
     -@if exist $(dllRelDir)\blatproj.lib erase $(dllRelDir)\blatproj.lib
     -@if exist $(dllRelDir)\blat.obj erase $(dllRelDir)\blat.obj
-    $(LIB32) @<<
-  $(dllRel_LIB32_FLAGS) $(dllRel_LIB32_OBJS)
-<<
+    $(LIB32) $(dllRel_LIB32_FLAGS) $(dllRel_LIB32_OBJS)
 
 $(dllRelDir)\blat.dll : $(dllRelDir) $(dll_DEF_FILE) $(dllRelDir)\blatproj.lib \
                         $(dllRel_LINK32_OBJS)
-    $(LINK32) @<<
-  $(dllRel_LINK32_FLAGS) $(dllRel_LINK32_OBJS)
-<<
+    $(LINK32) $(dllRel_LINK32_FLAGS) $(dllRel_LINK32_OBJS)
 
 $(dllDbgDir)\blatproj.lib : $(dllDbgDir) $(dll_DEF_FILE) $(dllDbg_LIB32_OBJS)
     -@if exist $(dllDbgDir)\blatproj.lib erase $(dllDbgDir)\blatproj.lib
     -@if exist $(dllDbgDir)\blat.obj erase $(dllDbgDir)\blat.obj
-    $(LIB32) @<<
-  $(dllDbg_LIB32_FLAGS) $(dllDbg_LIB32_OBJS)
-<<
+    $(LIB32) $(dllDbg_LIB32_FLAGS) $(dllDbg_LIB32_OBJS)
 
 $(dllDbgDir)\blat.dll : $(dllDbgDir) $(dll_DEF_FILE) $(dllDbgDir)\blatproj.lib \
                         $(dllDbg_LINK32_OBJS)
-    $(LINK32) @<<
-  $(dllDbg_LINK32_FLAGS) $(dllDbg_LINK32_OBJS)
-<<
+    $(LINK32) $(dllDbg_LINK32_FLAGS) $(dllDbg_LINK32_OBJS)
 
 
 #
