--- a/full/source/blat.vcproj
+++ b/full/source/blat.vcproj
@@ -49,7 +49,7 @@
 				InlineFunctionExpansion="0"
 				FavorSizeOrSpeed="2"
 				OmitFramePointers="true"
-				PreprocessorDefinitions="WIN32,_WIN32,NDEBUG,_CONSOLE,GENSOCK_STATIC_LINK,WINVER=0x0400"
+				PreprocessorDefinitions="WIN32,_WIN32,NDEBUG,_WINDOWS,GENSOCK_STATIC_LINK,WINVER=0x0400"
 				StringPooling="true"
 				ExceptionHandling="1"
 				RuntimeLibrary="0"
@@ -149,7 +149,7 @@
 				InlineFunctionExpansion="0"
 				FavorSizeOrSpeed="2"
 				OmitFramePointers="false"
-				PreprocessorDefinitions="WIN64,_WIN64,NDEBUG,_CONSOLE,GENSOCK_STATIC_LINK"
+				PreprocessorDefinitions="WIN64,_WIN64,NDEBUG,_WINDOWS,GENSOCK_STATIC_LINK"
 				StringPooling="true"
 				ExceptionHandling="1"
 				RuntimeLibrary="0"
@@ -244,7 +244,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				PreprocessorDefinitions="WIN32,_WIN32,_DEBUG,_CONSOLE,WINVER=0x0400"
+				PreprocessorDefinitions="WIN32,_WIN32,_DEBUG,_WINDOWS,WINVER=0x0400"
 				BasicRuntimeChecks="0"
 				RuntimeLibrary="1"
 				StructMemberAlignment="0"
@@ -339,7 +339,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				PreprocessorDefinitions="WIN64,_WIN64,UNICODE,_UNICODE,_DEBUG,_CONSOLE,WINVER=0x0501"
+				PreprocessorDefinitions="WIN64,_WIN64,UNICODE,_UNICODE,_DEBUG,_WINDOWS,WINVER=0x0501"
 				BasicRuntimeChecks="0"
 				RuntimeLibrary="1"
 				StructMemberAlignment="0"
